task1.html was modified

--- a/task1.html
+++ b/task1.html
@@ -11,67 +11,90 @@
     />
   </head>
   <body>
-    <center>
-      <h1>Joe Blogs</h1>
-      <h4>Adress</h4>
-    </center>
-    <strong>Contact Phone Number</strong>
-    <strong>
-      <ul>
-        <li>Alternative Contact phone number</li>
-        <li>youremail@youremail.com</li>
-      </ul>
-    </strong>
-    <p>Driving Lisence</p>
-    <ul>
-      <li>Car Owner</li>
-    </ul>
-    <hr>
-    <h2>Employment history</h2>
-    <h4>Job Title</h4>
-    <em>Company name , Location</em>
-    <br />
-    <p>Dates of Employment</p>
-    <em
-      >Very brief intro to company followed by a description of your
-      respobilities</em
-    >
-    <strong>
-      <p>Key achievments :</p>
-      <ul>
-        <li>Achievment 1</li>
-        <li>Achievment 2</li>
-      </ul>
-    </strong>
-    <h4>Job Title</h4>
-    <em>Company name , Location</em>
-    <br />
-    <p>Dates of Employment</p>
-    <em
-      >Very brief intro to company followed by a description of your
-      respobilities</em>
-    <strong>
-      <p>Key achievments :</p>
-      <ul>
-        <li>Achievment 1</li>
-        <li>Achievment 2</li>
-      </ul>
-    </strong>
-    <hr>
-    <h4>Education</h4>
-    <strong>Course and grade achieved</strong>
-    <br>
-    <em>Institution/Awarding body, Location</em>
-    <p>Year completed</p>
-    <strong>Course and grade achieved</strong>
-    <br>
-    <em>Institution/Awarding body, Location</em>
-    <p>Year completed</p>
-    <hr>
-    <h4>Proffesional Membership/Accreditions</h4>
-    <p>Membership</p>
-    <hr>
-    <h4>Languages</h4>
-    <p>Languages</p>
+    <div>
+      <center>
+        <h1>Joe Blogs</h1>
+        <h4>Adress</h4>
+      </center>
+      <div>
+        <strong>Contact Phone Number</strong>
+        <strong>
+          <ul>
+            <li>Alternative Contact phone number</li>
+            <li>youremail@youremail.com</li>
+          </ul>
+        </strong>
+      </div>
+      <div>
+        <p>Driving Lisence</p>
+        <ul>
+          <li>Car Owner</li>
+        </ul>
+      </div>
+    </div>
+    <hr />
+    <div>
+      <div>
+        <h2>Employment history</h2>
+        <h4>Job Title</h4>
+        <em>Company name , Location</em>
+        <br />
+        <p>Dates of Employment</p>
+      </div>
+      <em
+        >Very brief intro to company followed by a description of your
+        respobilities</em
+      >
+      <strong>
+        <p>Key achievments :</p>
+        <ul>
+          <li>Achievment 1</li>
+          <li>Achievment 2</li>
+        </ul>
+      </strong>
+      <div>
+        <h4>Job Title</h4>
+        <em>Company name , Location</em>
+        <br />
+        <p>Dates of Employment</p>
+        <em
+          >Very brief intro to company followed by a description of your
+          respobilities</em
+        >
+        <strong>
+          <p>Key achievments :</p>
+          <ul>
+            <li>Achievment 1</li>
+            <li>Achievment 2</li>
+          </ul>
+        </strong>
+      </div>
+    </div>
+    <hr />
+    <div>
+      <h4>Education</h4>
+      <div>
+        <strong>Course and grade achieved</strong>
+        <br />
+        <em>Institution/Awarding body, Location</em>
+        <p>Year completed</p>
+      </div>
+      <div>
+        <strong>Course and grade achieved</strong>
+        <br />
+        <em>Institution/Awarding body, Location</em>
+        <p>Year completed</p>
+      </div>
+    </div>
+    <hr />
+    <div>
+      <h4>Proffesional Membership/Accreditions</h4>
+      <p>Membership</p>
+    </div>
+    <hr />
+    <div>
+      <h4>Languages</h4>
+      <p>Languages</p>
+    </div>
   </body>
 </html>
